fix(numeric input): realign numeric input buttons

--- a/packages/vapor/scss/controls/numeric-input.scss
+++ b/packages/vapor/scss/controls/numeric-input.scss
@@ -21,22 +21,27 @@ $numeric-input-buttons-border-radius: 4px;
         box-shadow: inset 0 0 3px 0 rgba(var(--black-rgb), $transparency-5);
     }
 
-    .btn {
-        display: inline-block;
+    button {
+        --fill: var(--white);
         width: $numeric-input-height;
         height: $numeric-input-height;
-        color: var(--white);
-        line-height: $numeric-input-height - 2 * $default-border-size;
-        background-color: var(--deprecated-blue-purple-2);
+        padding: 0 7px;
+        line-height: $numeric-input-height;
+        background-color: var(--digital-blue-80);
         border-radius: $numeric-input-buttons-border-radius;
-        outline: none;
+        cursor: pointer;
 
-        &:focus {
-            background-color: var(--deprecated-blue-purple-2);
+        &:disabled {
+            background-color: var(--grey-40);
+            pointer-events: none;
         }
 
-        .icon {
-            fill: var(--white);
+        &:hover {
+            background-color: var(--digital-blue-100);
+        }
+
+        &:focus {
+            @include focus-border(2px);
         }
     }
 }
